<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_activity_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="main_scores_button">Scores app</string>
    <string name="main_library_button">Library app</string>
    <string name="main_build_it_button">Build it bigger</string>
    <string name="main_xyz_reader_button">XYZ Reader</string>
    <string name="main_capstone_button">Capstone:My own app</string>
    <string name="main_spotify_button">Spotify Streamer</string>
</resources>
