<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:text="@string/main_activity_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        />

    <Button
    android:text="@string/main_spotify_button"
    android:id="@+id/spotify_btn"
        android:layout_marginTop="30dp"
    style="@style/main_button"
        android:onClick="openSpotifyStreamer"
       />

    <Button
        android:text="@string/main_scores_button"
        android:id="@+id/scores_btn"
        style="@style/main_button"
        android:onClick="openScoresApp"
        android:textAllCaps="true"/>

    <Button
        android:text="@string/main_library_button"
        android:id="@+id/library_btn"
        style="@style/main_button"
        android:onClick="openLibApp"
        android:textAllCaps="true"/>

    <Button
        android:text="@string/main_build_it_button"
        android:id="@+id/build_it_btn"
        style="@style/main_button"
        android:onClick="openBuildItApp"
        android:textAllCaps="true"/>

    <Button
        android:text="@string/main_xyz_reader_button"
        android:id="@+id/xyz_reader_btn"
        style="@style/main_button"
        android:onClick="openXYZApp"
        android:textAllCaps="true"/>

    <Button
        android:text="@string/main_capstone_button"
        android:id="@+id/capstone_btn"
        style="@style/main_button"
        android:onClick="openCapstone"
        android:background="@color/red"
        android:textAllCaps="true"/>


</LinearLayout>
